--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "npm-run-all": "4.1.5",
     "remark-cli": "11.0.0",
     "remark-toc": "8.0.1"
+  },
+  "dependencies": {
+    "prettier": "^2.7.1"
   }
 }
