chore: formatted config files

--- a/.lockfile-lintrc.json
+++ b/.lockfile-lintrc.json
@@ -2,7 +2,5 @@
   "path": "package-lock.json",
   "type": "npm",
   "validate-https": true,
-  "allowed-hosts": [
-    "npm"
-  ]
+  "allowed-hosts": ["npm"]
 }
