--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,6 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "github>form8ion/renovate-config:js-package"
-  ]
+  "extends": ["github>form8ion/renovate-config:js-package"]
 }
