--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -4,3 +4,4 @@ repository:
   description: shareable config for prettier
   homepage: https://npm.im/@form8ion/prettier-config
   private: false
+  allow_auto_merge: true
