ci(release): updated to modern conventions

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "index.js"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "sideEffects": false,
   "runkitExampleFilename": "./example.js",
